--- a/C++/Soft_Materials_Tester/Soft_Materials_Tester/Soft_Materials_Tester.vcxproj
+++ b/C++/Soft_Materials_Tester/Soft_Materials_Tester/Soft_Materials_Tester.vcxproj
@@ -141,9 +141,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SerialPort.cpp" />
+    <ClCompile Include="a2pc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SerialPort.h" />
+    <ClInclude Include="a2pc.h" />
+    <ClInclude Include="test.h" />
+    <ClInclude Include="testStep.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
