Moving custom test code
PROBLEM: c++14 is required for some header files used by the SerialPort Library. (if not used "byte will become ambigous") But since im not using c++17 std::filesystem wont work correctly in my other code.

--- a/C++/Soft_Materials_Tester/Soft_Materials_Tester/Soft_Materials_Tester.vcxproj
+++ b/C++/Soft_Materials_Tester/Soft_Materials_Tester/Soft_Materials_Tester.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>Default</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,11 +140,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="customTests.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SerialPort.cpp" />
     <ClCompile Include="a2pc.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="customTests.h" />
     <ClInclude Include="SerialPort.h" />
     <ClInclude Include="a2pc.h" />
     <ClInclude Include="test.h" />
