--- a/C++/Soft_Materials_Tester/Soft_Materials_Tester/Soft_Materials_Tester.vcxproj.filters
+++ b/C++/Soft_Materials_Tester/Soft_Materials_Tester/Soft_Materials_Tester.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="a2pc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="customTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SerialPort.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="a2pc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="customTests.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
